# pixlet

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  input.css  package.json
.github/workflows/: vercel_deploy.yml
src/: lib.rs  main.rs
src/components/snippets/: converter_card_snippet.rs  features_snippet.rs  footer_snippet.rs  header_snippet.rs  hero_snippet.rs  mod.rs
src/conversion/: decode.rs  encode.rs  file_io.rs  formats.rs  mod.rs
src/pages/: about_page.rs  features_page.rs  home_page.rs  mod.rs  not_found_page.rs
