[package]
name = "pixlet"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"

# image conversion
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif", "bmp", "tiff"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "File", "FileList", "FileReader",
    "Blob", "BlobPropertyBag",
    "Url",
    "HtmlInputElement", "HtmlAnchorElement",
    "DragEvent", "DataTransfer",
    "Event",
    "Document", "Window", "Element",
] }
gloo-timers = { version = "0.3", features = ["futures"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
